--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "method-override": "^3.0.0",
     "nodemon": "^3.1.4",
     "path": "^0.12.7"
-  }
+  },
+  "description": ""
 }
